--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,6 +8,8 @@
 
         <item name="windowSplashScreenBackground">@color/white</item>
 
+        <item name="windowSplashScreenAnimationDuration">500</item>
+
         <item name="postSplashScreenTheme">@style/Theme.BookingApp</item>
     </style>
 </resources>
